--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -87,7 +87,7 @@
     "share": "Compartir",
     "clone": "Clonar",
     "errata": "Erratas",
-    "errata_modified": "ha sido modificado por una errata en",
+    "errata_modified": "ha sido modificado por una errata el",
     "total_crypt": "Cartas de cripta",
     "disciplines_sup_inf": "{{ count }} superior | inferior",
     "total_library": "Cartas de biblioteca",
@@ -114,7 +114,7 @@
     "save": "Guardar",
     "delete": "Borrar",
     "published_tooltip": "Haz público este deck para que otros puedan verlo y comentarlo.",
-    "published": "Mazo publico",
+    "published": "Mazo público",
     "undo": "Deshacer",
     "undo_tooltip": "Deshacer el último cambio",
     "change_history": "Historial de cambios",
@@ -142,7 +142,8 @@
     "previous_card": "Carta anterior",
     "next_card": "Carta siguiente",
     "print_on_demand": "Impresión bajo demanda",
-    "promo": "Promo"
+    "promo": "Promo",
+    "private_deck": "Mazo Privado"
   },
   "decks": {
     "total_decks": "<strong>{{ total }}</strong> mazos",
@@ -150,7 +151,7 @@
     "my_decks": "Mis mazos",
     "tournament": "Torneo",
     "community": "Comunidad",
-    "preconstructed": "Pre-construido",
+    "preconstructed": "Preconstruido",
     "newest": "Nuevo",
     "oldest": "Antiguo",
     "modified": "Modificado",
@@ -208,7 +209,7 @@
     "decks": "Mazos",
     "crypt": "Cripta",
     "library": "Biblioteca",
-    "builder": "Constructor",
+    "builder": "Editor",
     "tools": "Herramientas",
     "table_seating": "Asignación de asientos",
     "contact": "Contacto",
@@ -226,7 +227,7 @@
     "tournament_decks": "Mazos de Torneo",
     "community_decks": "Mazos de Comunidad",
     "preconstructed_decks": "Mazos Preconstruidos",
-    "deck_builder": "Constructor de mazos",
+    "deck_builder": "Editor de Mazos",
     "user_decks": "Mis Mazos",
     "bookmarked_decks": "Mazos Favoritos",
     "contribute_message": "Si desea contribuir, informar errores o plantear un problema, puede hacerlo mediante",
