--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -381,6 +381,45 @@
       "reaction": "Reaction",
       "event": "Event",
       "trifle": "Nimiedad"
+    },
+    "discipline": {
+      "abombwe": "Abombwe",
+      "animalism": "Animalism",
+      "auspex": "Auspex",
+      "celerity": "Celerity",
+      "chimerstry": "Chimerstry",
+      "daimoinon": "Daimoinon",
+      "dementation": "Dementation",
+      "dominate": "Dominate",
+      "fortitude": "Fortitude",
+      "maleficia": "Maleficia",
+      "melpominee": "Melpominee",
+      "mytherceria": "Mytherceria",
+      "necromancy": "Necromancy",
+      "obeah": "Obeah",
+      "obfuscate": "Obfuscate",
+      "obtenebration": "Obtenebration",
+      "potence": "Potence",
+      "presence": "Presence",
+      "protean": "Protean",
+      "quietus": "Quietus",
+      "sanguinus": "Sanguinus",
+      "serpentis": "Serpentis",
+      "spiritus": "Spiritus",
+      "striga": "Striga",
+      "temporis": "Temporis",
+      "thanatosis": "Thanatosis",
+      "bloodsorcery": "Blood Sorcery",
+      "valeren": "Valeren",
+      "vicissitude": "Vicissitude",
+      "visceratika": "Visceratika",
+      "defense": "Defense",
+      "innocence": "Innocence",
+      "judgment": "Judgment",
+      "martyrdom": "Martyrdom",
+      "redemption": "Redemption",
+      "vengeance": "Vengeance",
+      "vision": "Vision"
     }
   }
 }
