--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -381,6 +381,45 @@
       "reaction": "Reacción",
       "event": "Evento",
       "trifle": "Nimiedad"
+    },
+    "discipline": {
+      "abombwe": "Abombwe",
+      "animalism": "Animalismo",
+      "auspex": "Áuspex",
+      "celerity": "Celeridad",
+      "chimerstry": "Quimerismo",
+      "daimoinon": "Daimoinon",
+      "dementation": "Dementación",
+      "dominate": "Dominación",
+      "fortitude": "Fortaleza",
+      "maleficia": "Maleficia",
+      "melpominee": "Melpominee",
+      "mytherceria": "Mytherceria",
+      "necromancy": "Nigromancia",
+      "obeah": "Obeah",
+      "obfuscate": "Ofuscación",
+      "obtenebration": "Obtenebración",
+      "potence": "Potencia",
+      "presence": "Presencia",
+      "protean": "Protean",
+      "quietus": "Quietus",
+      "sanguinus": "Sanguinus",
+      "serpentis": "Serpentis",
+      "spiritus": "Spiritus",
+      "striga": "Striga",
+      "temporis": "Temporis",
+      "thanatosis": "Thanatosis",
+      "bloodsorcery": "Hechicería de Sangre",
+      "valeren": "Valeren",
+      "vicissitude": "Vicisitud",
+      "visceratika": "Visceratika",
+      "defense": "Defensa",
+      "innocence": "Inocencia",
+      "judgment": "Juicio",
+      "martyrdom": "Martirio",
+      "redemption": "Redención",
+      "vengeance": "Venganza",
+      "vision": "Visión"
     }
   }
 }
