Add clan translation

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -420,6 +420,54 @@
       "redemption": "Redemption",
       "vengeance": "Vengeance",
       "vision": "Vision"
+    },
+    "clan": {
+      "abo": "Abomination",
+      "ahrimanes": "Ahrimane",
+      "akunanse": "Akunanse",
+      "assamite": "Assamite",
+      "baali": "Baali",
+      "bloodbrothers": "Blood Brother",
+      "brujah": "Brujah",
+      "brujahanti": "Brujah antitribu",
+      "caitiff": "Caitiff",
+      "daughters": "Daughter of Cacophony",
+      "fos": "Follower of Set",
+      "gangrel": "Gangrel",
+      "gangrelanti": "Gangrel antitribu",
+      "gargoyle": "Gargoyle",
+      "giovanni": "Giovanni",
+      "guruhi": "Guruhi",
+      "harbingers": "Harbinger of Skulls",
+      "ishtarri": "Ishtarri",
+      "kiasyd": "Kiasyd",
+      "lasombra": "Lasombra",
+      "malkavian": "Malkavian",
+      "malkaviananti": "Malkavian antitribu",
+      "nagaraja": "Nagaraja",
+      "nosferatu": "Nosferatu",
+      "nosferatuanti": "Nosferatu antitribu",
+      "osebo": "Osebo",
+      "pander": "Pander",
+      "ravnos": "Ravnos",
+      "salubri": "Salubri",
+      "salubrianti": "Salubri antitribu",
+      "samedi": "Samedi",
+      "toreador": "Toreador",
+      "toreadoranti": "Toreador antitribu",
+      "tremere": "Tremere",
+      "tremereanti": "Tremere antitribu",
+      "truebrujah": "True Brujah",
+      "tzimisce": "Tzimisce",
+      "ventrue": "Ventrue",
+      "ventrueanti": "Ventrue antitribu",
+      "visionary": "Visionary",
+      "avenger": "Avenger",
+      "defender": "Defender",
+      "innocent": "Innocent",
+      "judge": "Judge",
+      "martyr": "Martyr",
+      "redeemer": "Redeemer"
     }
   }
 }
