--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -388,12 +388,12 @@
       "auspex": "Áuspex",
       "celerity": "Celeridad",
       "chimerstry": "Quimerismo",
-      "daimoinon": "Daimoinon",
+      "daimoinon": "Daimonion",
       "dementation": "Dementación",
       "dominate": "Dominación",
       "fortitude": "Fortaleza",
       "maleficia": "Maleficia",
-      "melpominee": "Melpominee",
+      "melpominee": "Melpómine",
       "mytherceria": "Mytherceria",
       "necromancy": "Nigromancia",
       "obeah": "Obeah",
@@ -402,17 +402,17 @@
       "potence": "Potencia",
       "presence": "Presencia",
       "protean": "Protean",
-      "quietus": "Quietus",
+      "quietus": "Extinción",
       "sanguinus": "Sanguinus",
       "serpentis": "Serpentis",
       "spiritus": "Spiritus",
       "striga": "Striga",
       "temporis": "Temporis",
-      "thanatosis": "Thanatosis",
+      "thanatosis": "Tanatosis",
       "bloodsorcery": "Hechicería de Sangre",
       "valeren": "Valeren",
       "vicissitude": "Vicisitud",
-      "visceratika": "Visceratika",
+      "visceratika": "Viscerátika",
       "defense": "Defensa",
       "innocence": "Inocencia",
       "judgment": "Juicio",
@@ -420,6 +420,54 @@
       "redemption": "Redención",
       "vengeance": "Venganza",
       "vision": "Visión"
+    },
+    "clan": {
+      "abo": "Abomination",
+      "ahrimanes": "Ahrimane",
+      "akunanse": "Akunanse",
+      "assamite": "Assamita",
+      "baali": "Baali",
+      "bloodbrothers": "Hermanos de Sangre",
+      "brujah": "Brujah",
+      "brujahanti": "Brujah antitribu",
+      "caitiff": "Caitiff",
+      "daughters": "Hijas de la Cacofonía",
+      "fos": "Seguidores de Set",
+      "gangrel": "Gangrel",
+      "gangrelanti": "Gangrel antitribu",
+      "gargoyle": "Gargoyle",
+      "giovanni": "Giovanni",
+      "guruhi": "Guruhi",
+      "harbingers": "Harbinger of Skulls",
+      "ishtarri": "Ishtarri",
+      "kiasyd": "Kiasyd",
+      "lasombra": "Lasombra",
+      "malkavian": "Malkavian",
+      "malkaviananti": "Malkavian antitribu",
+      "nagaraja": "Nagaraja",
+      "nosferatu": "Nosferatu",
+      "nosferatuanti": "Nosferatu antitribu",
+      "osebo": "Osebo",
+      "pander": "Pander",
+      "ravnos": "Ravnos",
+      "salubri": "Salubri",
+      "salubrianti": "Salubri antitribu",
+      "samedi": "Samedi",
+      "toreador": "Toreador",
+      "toreadoranti": "Toreador antitribu",
+      "tremere": "Tremere",
+      "tremereanti": "Tremere antitribu",
+      "truebrujah": "True Brujah",
+      "tzimisce": "Tzimisce",
+      "ventrue": "Ventrue",
+      "ventrueanti": "Ventrue antitribu",
+      "visionary": "Visionary",
+      "avenger": "Avenger",
+      "defender": "Defender",
+      "innocent": "Innocent",
+      "judge": "Judge",
+      "martyr": "Martyr",
+      "redeemer": "Redeemer"
     }
   }
 }
