--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -93,7 +93,11 @@
     "total_library": "Cartas de biblioteca",
     "total_pool_cost": "Coste total de vida",
     "total_blood_cost": "Coste total de sangre",
-    "no_discipline": "Sin disciplina"
+    "no_discipline": "Sin disciplina",
+    "rate_failed": "Algo salió mal al puntuar el mazo",
+    "rate_success": "¡Gracias por tu puntuación!",
+    "bookmark_error": "Algo salió mal al añadir el mazo a favoritos",
+    "link_copied": "Enlace copiado al portapapeles"
   },
   "deck_builder": {
     "deck_not_exists": "El mazo no existe. Inténtalo de nuevo más tarde.",
