Add taints translations

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -484,6 +484,48 @@
       "stealth": "stealth",
       "swarm": "swarm",
       "vote": "vote"
+    },
+    "taints": {
+      "+Intercept": "+Intercept",
+      "+Stealth": "+Stealth",
+      "+Bleed": "+Bleed",
+      "+Strength": "+Strength",
+      "+Hand Size": "+Hand Size",
+      "Titled": "Titled",
+      "Maneuver": "Maneuver",
+      "Additional Strike": "Additional Strike",
+      "Aggravated": "Aggravated",
+      "Prevent": "Prevent",
+      "Press": "Press",
+      "Enter combat": "Enter combat",
+      "Unlock": "Unlock",
+      "Black Hand": "Black Hand",
+      "Seraph": "Seraph",
+      "Infernal": "Infernal",
+      "Red List": "Red List",
+      "Advanced": "Advanced",
+      "Banned": "Banned",
+      "Slave": "Slave",
+      "Used by TWD": "Used by TWD",
+      "Add Blood": "Add Blood",
+      "+Intercept / -Stealth": "+Intercept / -Stealth",
+      "+Stealth / -Intercept": "+Stealth / -Intercept",
+      "+Votes / Title": "+Votes / Title",
+      "Dodge": "Dodge",
+      "Combat Ends": "Combat Ends",
+      "Change target": "Change target",
+      "Reduce a Bleed": "Reduce a Bleed",
+      "Wake": "Wake",
+      "Create vampire": "Create vampire",
+      "Burn Option": "Burn Option",
+      "Reflex": "Reflex",
+      "Multi-Type": "Multi-Type",
+      "Multi-Discipline": "Multi-Discipline",
+      "Flight": "Flight",
+      "Sterile": "Sterile",
+      "Scarce": "Scarce",
+      "Blood Cursed": "Blood Cursed",
+      "Circle": "Circle"
     }
   }
 }
