--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -53,10 +53,10 @@
     "deck_popularity_title": "popularidad basada en la cantidad de mazos que contienen al menos una copia de la carta",
     "card_popularity": "Popularidad de la carta",
     "card_popularity_title": "popularidad basada en el número de copias de esta carta en todos los mazos",
-    "reset": "Restablecer",
+    "reset": "Reiniciar",
     "filters": "Filtros",
     "results": "{{ count }} resultados",
-    "reset_filters": "Restablecer filtros",
+    "reset_filters": "Reiniciar filtros",
     "back_to_top": "Volver arriba"
   },
   "date_ago_pipe": {
@@ -279,7 +279,7 @@
     "reset": "Reiniciar",
     "filters": "Filtros",
     "results": "{{ count }} resultados",
-    "reset_filters": "Restablecer filtros",
+    "reset_filters": "Reiniciar filtros",
     "back_to_top": "Volver arriba"
   },
   "login_modal": {
@@ -484,6 +484,48 @@
       "stealth": "sigilo",
       "swarm": "enjambre",
       "vote": "voto"
+    },
+    "taints": {
+      "+Intercept": "+Intercepción",
+      "+Stealth": "+Sigilo",
+      "+Bleed": "+Sangrado",
+      "+Strength": "+Fuerza",
+      "+Hand Size": "+a la Mano",
+      "Titled": "Titulado",
+      "Maneuver": "Maniobra",
+      "Additional Strike": "Ataque Adicional",
+      "Aggravated": "Agravado",
+      "Prevent": "Prevención",
+      "Press": "Acoso",
+      "Enter combat": "Entrar en combate",
+      "Unlock": "Enderezar",
+      "Black Hand": "Mano Negra:",
+      "Seraph": "Seraph",
+      "Infernal": "Infernal",
+      "Red List": "Lista Roja",
+      "Advanced": "Avanzado",
+      "Banned": "Baneado",
+      "Slave": "Esclavo",
+      "Used by TWD": "Usado en TWD",
+      "Add Blood": "Añadir Sangre",
+      "+Intercept / -Stealth": "+Intercepción / -Sigilo",
+      "+Stealth / -Intercept": "+Sigilo / -Intercepción",
+      "+Votes / Title": "+Votos / Titulo",
+      "Dodge": "Esquivar",
+      "Combat Ends": "Combate Termina",
+      "Change target": "Cambiar objetivo",
+      "Reduce a Bleed": "Reducir un Sangrado",
+      "Wake": "Despierta",
+      "Create vampire": "Crear vampiro",
+      "Burn Option": "Opcion de Quemar",
+      "Reflex": "Reflex",
+      "Multi-Type": "Multi-Tipo",
+      "Multi-Discipline": "Multi-Disciplina",
+      "Flight": "Vuelo",
+      "Sterile": "Estéril",
+      "Scarce": "Escaso",
+      "Blood Cursed": "Sangre Maldita",
+      "Circle": "Círculo"
     }
   }
 }
