Fix trifle localization

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -385,7 +385,7 @@
       "combat": "Combat",
       "reaction": "Reaction",
       "event": "Event",
-      "trifle": "Nimiedad"
+      "trifle": "Trifle"
     },
     "discipline": {
       "abombwe": "Abombwe",
