Add oblivion discipline

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -403,6 +403,7 @@
       "necromancy": "Necromancy",
       "obeah": "Obeah",
       "obfuscate": "Obfuscate",
+      "oblivion": "Oblivion",
       "obtenebration": "Obtenebration",
       "potence": "Potence",
       "presence": "Presence",
