--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -403,6 +403,7 @@
       "necromancy": "Nigromancia",
       "obeah": "Obeah",
       "obfuscate": "Ofuscación",
+      "oblivion": "Oblivion",
       "obtenebration": "Obtenebración",
       "potence": "Potencia",
       "presence": "Presencia",
