--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -395,6 +395,7 @@
       "necromancy": "Necromancy",
       "obeah": "Obeah",
       "obfuscate": "Obfuscate",
+      "oblivion": "Oblivion",
       "obtenebration": "Obtenebration",
       "potence": "Potence",
       "presence": "Presence",
