--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -169,7 +169,7 @@
     "number_of_copies": "número de cópias",
     "any": "Qualquer",
     "none": "Nenhum",
-    "clear_filters": "Limpar filtros",
+    "clear_filters": "Repor filtros",
     "bookmarked": "Favoritos",
     "tags": "Etiquetas",
     "tags_placeholder": "Adicionar etiquetas...",
